--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   carousel_pro: ^1.0.0
   expansion_tile_card: ^1.0.3
   flutter_rounded_date_picker: ^1.0.4
-  shared_preferences: ^0.5.7+2
+  shared_preferences: ^2.0.5
   flutter_svg: ^0.22.0
   timeline_tile: ^0.1.2
   slide_to_confirm: ^0.0.6
@@ -55,7 +55,7 @@ dependencies:
   geolocator: ^5.3.2+2
   font_awesome_flutter: ^8.11.0
   url_launcher: ^6.0.3
-  root_check: ^0.0.1
+  root_check: ^0.0.2+1
   encrypt: ^5.0.0
   #  ionicons: ^0.1.2
 #  latlong2: ^0.8.0
