--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,42 +27,42 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+#  cupertino_icons: ^0.1.3
 #  google_sign_in: ^4.4.0
   http: ^0.13.3
   badges: 1.1.0
   google_fonts: ^2.0.0
-  sleek_button: ^0.1.1
-  flutter_signin_button: ^1.0.0
-  intl: ^0.16.1
-  sqflite: 1.1.8
+  sleek_button: ^0.2.0
+  flutter_signin_button: ^2.0.0
+  intl: ^0.17.0
+  sqflite: ^2.0.0+3
   carousel_pro: ^1.0.0
-  expansion_tile_card: ^1.0.3
-  flutter_rounded_date_picker: ^1.0.4
+  expansion_tile_card: ^2.0.0
+  flutter_rounded_date_picker: ^2.0.2
   shared_preferences: ^2.0.5
   flutter_svg: ^0.22.0
-  timeline_tile: ^0.1.2
+  timeline_tile: ^2.0.0
   slide_to_confirm: ^0.0.6
   group_radio_button: ^1.0.1
-  loading_gifs: ^0.2.3
+  loading_gifs: ^0.3.0
   flutter_masked_text: ^0.8.0
-  fluttertoast: ^7.1.1
-#  dotted_border: ^1.0.6
-  image_picker: ^0.7.4
+  fluttertoast: ^8.0.7
+# dotted_border: ^1.0.6
+  image_picker: ^0.8.0+1
   cool_alert: ^1.1.0
-  back_button_interceptor: ^4.4.0
-#  flutter_map: ^0.12.0
-  geolocator: ^5.3.2+2
-  font_awesome_flutter: ^8.11.0
+  back_button_interceptor: ^5.0.0
+# flutter_map: ^0.12.0
+  geolocator: ^7.0.3
+  font_awesome_flutter: ^9.0.0
   url_launcher: ^6.0.3
   root_check: ^0.0.2+1
   encrypt: ^5.0.0
-  #  ionicons: ^0.1.2
-#  latlong2: ^0.8.0
-#  logging: ^1.0.1
+# ionicons: ^0.1.2
+# latlong2: ^0.8.0
+# logging: ^1.0.1
   nice_button: ^0.1.7
-#  flutter_facebook_auth: ^3.3.3+1
-#  firebase_auth:
+# flutter_facebook_auth: ^3.3.3+1
+# firebase_auth:
 
 
 
