--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-#  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.3
 #  google_sign_in: ^4.4.0
   http: ^0.13.3
   google_fonts: ^2.0.0
