--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: arush
 description: A delivery application in bohol made by paul jearic niones
 
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -18,19 +19,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  http: ^0.13.3
+  webview_flutter: ^2.0.3
+  url_launcher: ^6.0.3
+
   platform: ^3.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
 #  google_sign_in: ^4.4.0
-  http: ^0.13.3
+
   google_fonts: ^2.0.0
   sleek_button: ^0.2.0
   flutter_signin_button: ^2.0.0
@@ -52,7 +60,6 @@ dependencies:
   back_button_interceptor: ^5.0.0
   geolocator: ^7.0.3
   font_awesome_flutter: ^9.0.0
-  url_launcher: ^6.0.3
   root_check: ^0.0.2+1
   encrypt: ^5.0.0
   nice_button: ^0.1.7
@@ -61,13 +68,15 @@ dependencies:
   chat_bubbles: ^1.1.0
 
   paymaya_flutter: ^0.1.0
-  webview_flutter: ^2.0.2
+
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^2.0.0
+  mocktail: ^0.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
